--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "rxjs": "~6.6.0",
+    "scss-scaffold": "0.0.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
